--- a/MidTerm_Regression.ipynb
+++ b/MidTerm_Regression.ipynb
@@ -17,13 +17,12 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler, LabelEncoder \n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer"
    ]
